[package]
name = "invaders"
version = "0.1.0"
authors = ["d3vco", "Nathan Stocks <nathan@agileperception.com>"]
edition = "2021"
description = "Open source terminal arcade game based off 'Space Invaders'"
homepage = "https://github.com/d3vco/invaders"
repository = "https://github.com/d3vco/invaders"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.1"
rusty_audio = "1.1.4"
rusty_time = "0.11.0"